# rosclaw-dashboard

./: .gitignore  DASHBOARD_VALIDATION_REPORT.md  README.md  package.json  另一个AI的想法.md  实施方案.md
apps/api/: README.md  pyproject.toml
apps/api/scripts/: seed.py
apps/api/src/: __init__.py  main.py
apps/api/src/core/: config.py
apps/api/src/models/: __init__.py  database.py  schemas.py
apps/api/src/routers/: __init__.py  episodes.py  events.py  mcap.py  memory.py  missions.py  providers.py  robots.py  runtime.py  safety.py  skills.py
apps/api/src/services/: __init__.py  agent_daemon.py  robot_service.py
apps/api/tests/: test_dashboard_integration.py  test_robots.py
apps/robot-daemon/: package.json
apps/robot-daemon/src/: index.ts
apps/web/: README.md  next.config.js  package-lock.json  package.json  screenshot.js  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/app/embodiment/: page.tsx
apps/web/app/episodes/: page.tsx
apps/web/app/events/: page.tsx
apps/web/app/memory/: page.tsx
apps/web/app/missions/: page.tsx
apps/web/app/providers/: page.tsx
apps/web/app/runtime/: page.tsx
apps/web/app/safety/: page.tsx
apps/web/app/skills/: page.tsx
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: DashboardShell.tsx
apps/web/src/lib/: api.ts
robots/turtlebot4/: robot.eurdf.yaml  robot.safety.yaml  robot.skills.yaml
robots/unitree_go2/: robot.eurdf.yaml  robot.safety.yaml  robot.skills.yaml
robots/ur5e/: robot.eurdf.yaml  robot.safety.yaml  robot.skills.yaml
(+12 files in other folders)
